# iCardsMCP

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AUTH_SETUP.md  DOCKER_DEPLOY.md  Dockerfile  README.md  SETUP.md  claude-mcp-config-uv.json  claude-mcp-config.json  claude_desktop_config_sse.json  docker-compose.yml  env.example  iCards_API_Postman_Collection.json  pyproject.toml  requirements.txt  ruff.toml  run_local.sh  run_mcp_stdio.sh  run_sse_mode.sh  server.py  setup_production.sh  test_server.py
app/adapters/: icards_api_adapter.py
app/common/: extensions.py
app/config/: config.py
app/constants/: __init__.py  api_endpoints.py
app/mcp/: helpers.py  instructions.py  server.py  tools.py  utils.py
app/mcp/instructions/: api_decks.md  api_domain.md  api_flashcards.md  api_instructions.md  api_study.md
app/models/: README.md  __init__.py  auth.py  common.py  decks.py  flashcards.py  mcp_tools.py  tags.py
app/services/: __init__.py  base_service.py  deck_service.py  flashcard_service.py  study_service.py  tag_service.py  typed_service.py
docs/: BEST_PRACTICES.md  MCP_STDIO_PROTOCOL.md
docs/InstructionsMCP/: api_decks.md  api_domain.md  api_flashcards.md  api_instructions.md  api_tags.md
scripts/: lint.sh  manage_instructions.sh
